Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@ gap: 20px;
 
           <div class="hero-content">
 
-            <p class="section-subtitle">Yanuar Zhaldy G</p>
+            <p class="section-subtitle">Sudar Blogger</p>
 
             <h1 class="h1 hero-title">Web Developer Based In ID</h1>
 
@@ -1967,5 +1967,6 @@ window.addEventListener("scroll", function () {
 </body>
 
 </html>
+
 
 
