--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@ gap: 20px;
         <div class="container">
 
           <figure class="hero-banner img-holder has-before" style="--width: 640; --height: 840;">
-            <img src="https://yanuarzg.github.io/assets/images/hero-banner.jpg" width="640" height="840" alt="Bernard Smith" class="img-cover">
+            <img src="https://www.sudar.web.id/assets/images/IMG-20251124-WA0022.jpg" width="640" height="840" alt="Bernard Smith" class="img-cover">
           </figure>
 
 
@@ -1967,6 +1967,7 @@ window.addEventListener("scroll", function () {
 </body>
 
 </html>
+
 
 
 
