--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang='en'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./banner.css" />
-<link rel="stylesheet" type="text/css" href="./icon.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/banner-styles.css" />
+<link rel="stylesheet" type="text/css" href="./assets/css/icon.css" />
 <head><meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kang Rian - Digital Creator</title>
     <meta name="description" content="Based in Bandung - Indonesia">
-    <link rel="icon" href="./icon.png">
-    <link rel="stylesheet" type="text/css" href=".assets/css/min.css">
+    <link rel="icon" href="./image/icon.png">
+    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <style type="text/css">
     header {
         display: flex;
