--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kang Rian - Digital Creator</title>
     <meta name="description" content="Based in Bandung - Indonesia">
-    <link rel="icon" href="./image/icon.png">
+    <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <style type="text/css">
     header {
@@ -129,7 +129,7 @@
                     </p>
                 </hgroup>
                 <figure class="hero">
-                    <img alt="hero" src=".image/heromu.png"/>
+                    <img alt="hero" src=".images/heromu.png"/>
                 </figure>
             </div>
         </div>
@@ -140,7 +140,7 @@
                 <div class="grid">
                     <div class="logo">
                         <a href="https://www.sudar.web.id/">
-                            <img alt="logo" src=".image/logo-white.png"/>
+                            <img alt="logo" src=".images/logo-white.png"/>
                         </a>
                     </div>
                     <nav class="menu">
