--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </p>
                 </hgroup>
                 <figure class="hero">
-                    <img alt="hero" src=".images/heromu.png"/>
+                    <img alt="hero" src="./images/heromu.png"/>
                 </figure>
             </div>
         </div>
@@ -140,7 +140,7 @@
                 <div class="grid">
                     <div class="logo">
                         <a href="https://www.sudar.web.id/">
-                            <img alt="logo" src=".images/logo-white.png"/>
+                            <img alt="logo" src="./images/logo-white.png"/>
                         </a>
                     </div>
                     <nav class="menu">
