--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/kangrian.net" target="_blank" rel="external nofollow">
+                                <a href="https://www.facebook.com/Nauval.sudarmanto" target="_blank" rel="external nofollow">
                                     <i class="logo-facebook"></i>
                                 </a>
                             </li>
