--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <ul>
                             <li>
                                 <a href="https://www.instagram.com/20.22sh" target="_blank" rel="external nofollow">
-                                    <i class="./assets/icons/intagram.png"></i>
+                                    <img src="./assets/icons/intagram.png"/>
                                 </a>
                             </li>
                             <li>
